<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_sreen"
    tools:context=".SplashScreen">


    <TextView

        android:id="@+id/text_goldiba"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:fontFamily="@font/myriadarabic"
        android:text="@string/goldiba"
        android:textColor="@color/black"
        android:textSize="58sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.80"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_hesiziba"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:fontFamily="@font/myriadarabic"
        android:text="@string/hesi_ziba"
        android:textColor="#BB5C6D"
        android:textSize="58sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/text_goldiba" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:visibility="gone"
            android:id="@+id/txt_internet_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="6dp"
            android:text="@string/network_error"
            android:textSize="15sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:visibility="gone"
            android:id="@+id/rel_try_again"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_internet_error"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/txt_try_network_again"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/try_agian"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="4dp"
                android:layout_toRightOf="@id/txt_try_network_again"
                app:srcCompat="@drawable/ic_baseline_refresh_24" />
        </RelativeLayout>


    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
